[gd_scene load_steps=4 format=3 uid="uid://2ys55dxa6j08"]

[ext_resource type="Script" path="res://Scripts/key.gd" id="1_1ju32"]
[ext_resource type="Texture2D" uid="uid://d6wr1t6cwx3c" path="res://Assets/key.png" id="1_me48b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nwete"]
radius = 9.0

[node name="Key" type="Area2D"]
script = ExtResource("1_1ju32")

[node name="KeyCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nwete")

[node name="Key" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_me48b")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
